classDiagram
direction TB
    class Game {
	    -renderer: DisplayManager
	    -physics: PhysicsEngine
	    -gameState: GameState
	    -ballManager: BallManager
	    -boundaryManager: BoundaryManager
	    -inputManager: InputManager
	    +init() void
    }
    class DisplayManager {
	    -app: Application
	    -centerLayer: Container
	    -gameViewport: Container
	    +getCenterLayer() Container
	    +getGameViewport() Container
    }
    class PhysicsEngine {
	    -engine: Engine
	    -world: World
	    +getWorld() World
	    +getEngine() Engine
    }
    class GameState {
	    +ballStartPosition: Position
	    +ballCount: number
	    +isWaiting: boolean
    }
    class BallManager {
	    -gameViewport: Container
	    -physicsWorld: World
	    -gameState: GameState
	    -activeBalls: Ball[]
    }
    class BoundaryManager {
	    -renderLayer: Container
	    -physicsWorld: World
	    -physicsEngine: PhysicsEngine
	    -boundaries: Map
    }
    class InputManager {
	    -layer: Container
    }

    Game --> DisplayManager
    Game --> PhysicsEngine
    Game --> GameState
    Game --> BallManager
    Game --> BoundaryManager
    Game --> InputManager
